--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+
+    <!-- CONTAINER -->
    <div id="container">
     <div id="header">
         <div class="sub-header"></div>
@@ -16,6 +18,8 @@
         </div>
         <div class="sub-header"></div>
     </div>
+
+    <!-- MAIN -->
     <div id="main">
         <div class="sub-main left"></div>
         <div class="sub-main right">
@@ -24,12 +28,11 @@
         </div>    
     </div>
 
+    <!-- FOOTER -->
     <div id="footer">
         <div class="sub-footer"></div>
-        <!-- <div class="sub-footer"> -->
             <div class="sub-footer1 left"></div>
             <div class="sub-footer1 right"></div>
-        <!-- </div> -->
         <div class="sub-footer"></div>
     </div>
    </div>
